--- a/www/templates/dishdetail.html
+++ b/www/templates/dishdetail.html
@@ -1,4 +1,7 @@
 <ion-view view-title="Dish Details">
+  <ion-nav-buttons side="secondary">
+    <button class="button" ng-click="openPopover($event)"><i class="icon ion-more"></i></button>
+  </ion-nav-buttons>
   <ion-content>
     <div class="card">
       <div class="item item-body item-text-wrap">
